changed "detection" to "alert"

--- a/utilities/loaders/react/index.html
+++ b/utilities/loaders/react/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <img class="app-logo heartbeat" src="./assets/logo.svg" alt="Loading logo" />
-    <h4 class="loading-header">Starting Apex<br />Jumpmaster Detection</h4>
+    <h4 class="loading-header">Starting Apex<br />Jumpmaster Alert</h4>
   </body>
 </html>
